# yolov8-pallet-box-pipeline

./: .gitignore  README.md
pallet_box_yolov8/: README.md
pallet_box_yolov8/configs/: classes.txt
pallet_box_yolov8/datasets/pallet_box/: dataset.yaml
pallet_box_yolov8/scripts/: analyze_data.py  export_onnx.py  inspect_labelme.py  labelme_to_yolo.py  predict.py  predict_test.py  train_yolov8.py  train_yolov8m.py  validate.py
pallet_box_yolov8/serving/: benchmark.py
pallet_box_yolov8/serving/cpp/: CMakeLists.txt  Dockerfile  main.cpp
pallet_box_yolov8/serving/python/: Dockerfile  app.py  requirements.txt
yolo_int8_jetson/: Dockerfile.jetson  README.md
yolo_int8_jetson/assets/: pallet_box.names
yolo_int8_jetson/cpp/: CMakeLists.txt
yolo_int8_jetson/cpp/src/: main.cpp  server.cpp
yolo_int8_jetson/scripts/: build_engine_int8.sh  build_engine_jetson.sh  calibrate_int8.py  prepare_calib_images.py  validate_int8.py
yolo_trt_cpp_lab/: .dockerignore  Dockerfile  README.md
yolo_trt_cpp_lab/scripts/: build_engine.sh  download_test_image.py  export_yolov8_onnx.py  run_cpp_infer.sh  run_server.sh
